--- a/front_end_codes/index.html
+++ b/front_end_codes/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -10,7 +11,7 @@
     <header>
         <div class="logo-title">
             <img src="download.png" alt="Logo">
-            <h1>Menard Sabugo Website</h1>
+            <h1>Homepage</h1>
         </div>
         <nav>
             <ul>
